# anesthetic

./: .gitignore  README.md  TunerStudioAppDebug.txt  pinouts.txt  wiki.md  working_radio_register_dump.txt
cameras/: batery box.FCStd  batery box.stl  combine_and_fix_videos  dell computer brackets.FCStd  dell computer brackets.stl  dell computer rails.FCStd  dell computer rails.stl  ethernet switch brackets.FCStd  ethernet switch brackets.stl  reencode_x264  reencode_x265_archival
dash/: dash.ino  oil pressure transducer calibration.ods  oil-temp-cender.csv  tach.ino  temp sensor calibration.ods
dash-rs/: Cargo.toml
dash-rs/src/: main.rs
design-brakes/: brakes.py
flow-tester/: data.csv  fuel_inj.py  platformio.ini
fome.release_2409.proteus_f7/: fome_update.srec
fome_vrsix19/: CurrentTune.msq
logos and graphics/: aaaaa.xcf  encouragement.xcf  facepalm-guy.xcf  facepalm-sheet.odt  fail-sheet.odt  fail.xcf  flags.xcf  hf-vr.xcf  logo.xcf  mission-shitshow-sheet.odt  mission-shitshow.xcf  mrclippit.odt  sheet2.odt  you-tried-sheet.odt  you-tried.xcf
misc physical parts/: EyeBrowL.stl  EyeBrowR.stl  EyeBrows-scaled-190.5-percent.3mf  air deflector.FCStd  air deflector.stl  apache case lower retainer.FCStd  apache case lower retainer.stl  blower motor mount.FCStd  blower mounts.stl  brake master cylinder alignment ring.FCStd  brake master cylinder alignment ring.stl  bumper mount blanking cap.FCStd  bumper mount blanking cap.stl  bumper side panel.FCStd  bumper side panel.step  clippy hook.FCStd  clippy hook.step  clippy hook.stl  cluster-left-side.stl  (+49 more)
(+303 files in other folders)
