[package]
name = "dash-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "0.2"
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.3.7"
panic-halt = "0.2"

[dependencies.stm32f4]
version = "0.14.0"
features = ["rt", "stm32f407"]

[dependencies.stm32f4xx-hal]
version = "0.22.1"
features = ["stm32f407"]


[[bin]]
name = "dash-rs"
test = false
bench = false

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true